// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes should render "/cheese" page 1`] = `
<DocumentFragment>
  <div>
    products-page-CHEESE
  </div>
</DocumentFragment>
`;

exports[`routes should render "/fruits" page 1`] = `
<DocumentFragment>
  <div>
    products-page-FRUITS
  </div>
</DocumentFragment>
`;

exports[`routes should render "/thank-you" page 1`] = `
<DocumentFragment>
  <div>
    thank-you-page
  </div>
</DocumentFragment>
`;

exports[`routes should render "/vegetables" page 1`] = `
<DocumentFragment>
  <div>
    products-page-VEGETABLES
  </div>
</DocumentFragment>
`;
